--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,15 @@ body {
         animation: loading 0.8s ease infinite;
     }
 }
+
+/* reveal on scroll */
+
+.reveal{
+    opacity: 0;
+    transform: translateY(-50px);
+    transition: opacity 0.7s ease, transform 0.7s ease;
+}
+.reveal.visible{
+    opacity: 1;
+    transform: translateY(0px);
+}
